--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,7 +1,7 @@
 plugins {
   id "org.mohme.gradle.elm-plugin" version "0.2.1"
 }
-task build(type: GradleBuild)<<{
+task build(type: GradleBuild){
   tasks=['elmMake']
 }
 
